force-app/main/default/objects/Line_item__c/Line_item__c.object-meta.xml
<CustomObject>
    <label>Line_item</label>
    <nameField>
        <label>Line_item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line_items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>