force-app/main/default/objects/Line_item__c/fields/InvStatement__c.field-meta.xml
<CustomField>
    <fullName>InvStatement__c</fullName>
    <label>InvStatement</label>
    <referenceTo>Invoice_Statement__c</referenceTo>
    <relationshipLabel>Line_items</relationshipLabel>
    <relationshipName>Line_items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>