force-app/main/default/objects/Line_item__c/fields/Merchandise_Item__c.field-meta.xml
<CustomField>
    <fullName>Merchandise_Item__c</fullName>
    <label>Merchandise_Item</label>
    <referenceTo>Merchandise__c</referenceTo>
    <relationshipLabel>Line_items</relationshipLabel>
    <relationshipName>Line_items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>