force-app/main/default/objects/Line_item__c/fields/Unit_Sold__c.field-meta.xml
<CustomField>
    <fullName>Unit_Sold__c</fullName>
    <label>Unit_Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>