force-app/main/default/objects/Line_item__c/validationRules/Lock_if_Invoice_is_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_if_Invoice_is_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>IF ( AND(ISNEW(),ISPICKVAL(InvStatement__r.Status__c, &apos;ClOSED&apos;)),true,false)</errorConditionFormula>
    <errorMessage>New Item not allow once Invoice is closed</errorMessage>
</ValidationRule>